--- a/app/views/populations/show.html.erb
+++ b/app/views/populations/show.html.erb
@@ -1,3 +1,3 @@
-<h3>You requested the population for: <%= year %></h3>
+<h3 id="year">You requested the population for: <%= year %></h3>
 
-<h3>Population: <%= population %></h3>
+<h3 id="population">Population: <%= population %></h3>
